--- a/sample_config.env
+++ b/sample_config.env
@@ -20,6 +20,16 @@ OWNER = ""
 # Contoh: FORCE_SUB2, FORCE_SUB3, dst
 FORCE_SUB1 = 0
 
+FORCE_SUB2 = 0
+
+FORCE_SUB3 = 0
+
+FORCE_SUB4 = 0
+
+FORCE_SUB5 = 0
+
+FORCE_SUB6 = 0
+
 # Masukan ID Channel Untuk [Channel Database]
 CHANNEL_ID = -100
 
