--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ gitpython
 heroku3
 psycopg2-binary
 pyrogram
+# git+https://github.com/KurimuzonAkuma/pyrogram@dev
 python-dotenv
 Pyromod==1.5
 speedtest-cli
